--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
 	<meta charset="UTF-8">
 	<title>Karma Clone</title>
   <link rel="stylesheet" href="css/style.css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	
+  <nav class="top-navigation">
+    <div class="content">
+      <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
+      <ul class="links">
+        <li class="active"><a href="#">Meet Karma</a></li>
+        <li><a href="#">How It Works<a></li>
+        <li><a href="#">Store</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Log in</a></li>
+      </ul>
+    </div>
+  </nav>
 </body>
 </html>
