--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
   <nav class="top-navigation">
     <div class="content">
-      <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
       <ul class="links">
-        <li class="active"><a href="#">Meet Karma</a></li>
-        <li><a href="#">How It Works<a></li>
-        <li><a href="#">Store</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Help</a></li>
-        <li><a href="#">Log in</a></li>
+        <li class="active">Meet Karma</li>
+        <li>How It Works</li>
+        <li>Store</li>
+        <li>Blog</li>
+        <li>Help</li>
+        <li>Log in</li>
       </ul>
+      <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
     </div>
   </nav>
 </body>
