--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     <div class="content">
       <h1>Introducing Karma</h1>
       <h3>Bringing WiFi with you, everywhere you go.</h3>
-      <div class="buttons">
-        <button>Learn More</button> 
-      </div>
+      <button class="big-button">Learn More</button> 
     </div>
   </section>
 </body>
