--- a/index.html
+++ b/index.html
@@ -24,26 +24,24 @@
     <div class="content">
       <h1>Introducing Karma</h1>
       <h3>Bringing WiFi with you, everywhere you go.</h3>
-      <button class="big-button">Learn More</button> 
+      <button class="big-button">Learn More</button>
     </div>
   </section>
   <section class="cases">
     <div class="content">
       <h2>Everyone needs a little Karma.</h2>
-      <ul class="devices">
-        <li>
-          <img src="images/icon-devices.svg" width="127px">
-          <h3>Internet for all devices</h3>
-        </li>
-        <li>
-          <img src="images/icon-coffee.svg" width="127px">
-          <h3>Boost your productivity</h3>
-        </li>
-        <li>
-          <img src="images/icon-refill.svg" width="127px">
-          <h3>Pay as You Go</h3>
-        </li>
-      </ul>
+      <div class="devices">
+        <img src="images/icon-devices.svg" width="127px">
+        <h3>Internet for all devices</h3>
+      </div><!--
+      --><div class="devices">
+        <img src="images/icon-coffee.svg" width="127px">
+        <h3>Boost your productivity</h3>
+      </div><!--
+      --><div class="devices">
+        <img src="images/icon-refill.svg" width="127px">
+        <h3>Pay as You Go</h3>
+      </div>
     </div>
   </section>
 </body>
