Footer challenge - problem with section collapsing onto itself

--- a/index.html
+++ b/index.html
@@ -44,5 +44,18 @@
       </div>
     </div>
   </section>
+  <footer class="social">
+    <div class="content">
+      <hr>
+      <h5>Join us on</h5>
+      <div class="social-icon">
+      </div>
+      <div class="social-icon">
+      </div>
+      <div class="social-icon">
+      </div>
+      <p>&copy; Karma Mobility, Inc.</p>
+    </div>
+  </footer>
 </body>
 </html>
