--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>Karma Clone</title>
   <link rel="stylesheet" href="css/style.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+  <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+  <link href="css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
   <nav class="top-navigation">
@@ -48,12 +50,17 @@
     <div class="content">
       <hr>
       <h5>Join us on</h5>
-      <div class="social-icon">
-      </div>
-      <div class="social-icon">
-      </div>
-      <div class="social-icon">
-      </div>
+      <ul class="icons">
+        <li>
+          <i class="fa fa-twitter"></i>
+        </li>
+        <li>
+          <i class="fa fa-facebook"></i>
+        </li>
+        <li>
+          <i class="fa fa-instagram"></i>
+        </li>
+      </ul>
       <p>&copy; Karma Mobility, Inc.</p>
     </div>
   </footer>
